kubernetes/gateway/order-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-route
  namespace: ecommerce
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/orders

      backendRefs:
        - name: order-service
          port: 8081
