kubernetes/gateway/payment-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payment-route
  namespace: ecommerce
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/payments

      backendRefs:
        - name: payment-service
          port: 8082
