kubernetes/gateway/product-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: product-route
  namespace: ecommerce
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/products

      backendRefs:
        - name: product-service
          port: 8085
